<resources>
  <string name="app_name" translatable="false">PAssist</string>
  <string name="channel_name_alarm">Alarms</string>
  <string name="channel_description_alarm">Urgent alarms.</string>
  <string name="channel_name_notification">Notifications</string>
  <string name="channel_description_notification">Non urgent notifications like for example the on-call state.</string>
  <string name="channel_name_change_system">System changes</string>
  <string name="channel_description_change_system">Change of system settings.</string>
  <string name="title_home">Overview</string>
  <string name="title_shift_overview">Calendar</string>
  <string name="title_alert_log">Alert log</string>
  <string name="title_test_alarms">Test alarms</string>
  <string name="title_activity_settings">Settings</string>
  <string name="title_activity_about">About</string>
  <string name="title_activity_logcat" translatable="false">Logcat</string>
  <string name="main_state_button_confirm_alert">Confirm</string>
  <string name="main_state_button_close_alert">Close</string>
  <string name="pref_header_calendar">Calendar</string>
  <string name="pref_title_calendar_selection">Calendar filter</string>
  <string name="pref_title_calendar_event_pikett_title_pattern">Event filter</string>
  <string name="pref_title_use_partner_contact_extraction">Extract partner contacts from events</string>
  <string name="pref_title_partner_search_pattern">Extraction pattern for partner contacts</string>
  <string name="pref_default_calendar_event_pikett_title_pattern">.*on-call.*</string>
  <string name="pref_default_partner_search_pattern" translatable="false">Deputy:\\s([a-z,0-9]*)(\\s|$)</string>
  <string name="pref_title_pre_post_time_seconds">Pre-/post-run time</string>
  <string name="pref_default_pre_post_run_time_seconds" translatable="false">300</string>
  <string name="pref_title_meta_sms_message_pattern">SMS ignore filter</string>
  <string name="pref_meta_sms_message_pattern">Enter a valid RegEx that fully matches SMS to be ignored</string>
  <string name="pref_title_supervise_battery_level">Supervise battery level</string>
  <string name="pref_title_battery_warn_level">Minimal battery level</string>
  <string name="pref_title_alarm_operations_center_contact">Operations center</string>
  <string name="pref_title_send_confirm_sms">Send confirmation replies</string>
  <string name="pref_title_sms_confirm_text">Confirmation reply</string>
  <string name="pref_default_sms_confirm_text">OK</string>
  <string name="pref_header_test_alarm">Test alarm</string>
  <string name="pref_title_test_alarm_message_pattern">Test alarm message pattern</string>
  <string name="pref_default_test_alarm_message_pattern">--- UNDEFINED ---</string>
  <string name="pref_title_supervise_test_contexts">Test contexts to supervise</string>
  <string name="pref_title_test_alarm_check_time">Check time</string>
  <string name="pref_title_test_alarm_enabled">Use test alarms</string>
  <string name="pref_default_test_alarm_check_time" translatable="false">12:00</string>
  <string name="pref_title_test_alarm_accept_time_window_minutes">Test alarm time window</string>
  <string name="pref_default_test_alarm_accept_time_window_minutes" translatable="false">15</string>
  <string name="pref_title_test_alarm_check_weekdays">Check days</string>
  <string name="weekdays_monday">Monday</string>
  <string name="weekdays_tuesday">Tuesday</string>
  <string name="weekdays_wednesday">Wednesday</string>
  <string name="weekdays_thursday">Thursday</string>
  <string name="weekdays_friday">Friday</string>
  <string name="weekdays_saturday">Saturday</string>
  <string name="weekdays_sunday">Sunday</string>
  <string name="signal_levels_off">Off</string>
  <string name="signal_levels_none">None</string>
  <string name="signal_levels_poor">Poor</string>
  <string name="signal_levels_moderate">Moderate</string>
  <string name="signal_levels_good">Good</string>
  <string name="signal_levels_great">Great</string>
  <string name="registration_errors_successful">Successful</string>
  <string name="registration_errors_no_secret">Failed, no secret</string>
  <string name="registration_errors_rejected">Rejected</string>
  <string name="registration_errors_missing_sms_permissions">Failed, S2MSP is missing SMS permissions</string>
  <string name="registration_errors_no_referrer">Failed, no referrer</string>
  <string name="registration_errors_no_extras">Failed, no extras</string>
  <string name="registration_errors_failed">Failed</string>
  <string name="pref_title_alarm_ring_tone">On-call alarming ringtone</string>
  <string name="pref_title_test_alarm_ring_tone">Ringtone for missing test alarm</string>
  <string name="pref_title_supervise_signal_strength">Supervise signal strength</string>
  <string name="pref_title_supervise_signal_strength_min_level">Minimal signal strength</string>
  <string name="pref_default_supervise_signal_strength_min_level" translatable="false">2</string>
  <string name="pref_title_supervise_signal_strength_subscription">Supervised subscription</string>
  <string name="subscription">Subscription</string>
  <string name="pref_default_supervise_signal_strength_subscription" translatable="false">1</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_donate">Donate</string>
  <string name="menu_logcat" translatable="false">Logcat</string>
  <string name="menu_about">About</string>
  <string name="menu_logcat_refresh">Refresh</string>
  <string name="menu_logcat_clear">Clear</string>
  <string name="preferences_calendar_all">All</string>
  <string name="preferences_alarm_ringtone_default">Default ringtone</string>
  <string name="alert_view_confirm_time">Time to confirm: %d seconds</string>
  <string name="alert_view_duration">Duration: %.1f minutes</string>
  <string name="alert_view_state_title">State</string>
  <string name="alert_view_state_closed">Closed</string>
  <string name="alert_view_state_wip">Work in progress</string>
  <string name="alert_view_state_to_be_confirmed">Awaiting confirmation</string>
  <string name="list_item_menu_view">View</string>
  <string name="list_item_menu_delete">Delete</string>
  <string name="list_item_menu_select">Select</string>
  <string name="list_item_menu_clear">Clear</string>
  <string name="list_item_menu_activate">Activate</string>
  <string name="list_item_menu_bogus_alarm">Schedule bogus alarm</string>
  <string name="toast_bogus_alarm">Bogus alarm will be triggered in 10 seconds …</string>
  <string name="list_item_menu_deactivate">Deactivate</string>
  <string name="list_item_menu_set_manually_on">Set manually on</string>
  <string name="list_item_menu_reset">Reset</string>
  <string name="test_alarm_context_general">General</string>
  <string name="notification_low_signal_title">Low signal</string>
  <string name="notification_low_signal_text">Signal level</string>
  <string name="notification_low_battery_title">Low battery</string>
  <string name="notification_low_battery_text">Battery level</string>
  <string name="state_fragment_signal_level">Signal</string>
  <string name="notification_pikett_on_title">On-call</string>
  <string name="notification_pikett_on_text">You are on-call!</string>
  <string name="notification_alert_title">On-call alert</string>
  <string name="notification_alert_text">Close alarm when all activities are finished.</string>
  <string name="notification_missing_test_alert_title">Missing test alarm</string>
  <string name="notification_missing_test_alert_text">Test contexts:</string>
  <string name="notification_alert_confirm_button">Confirm</string>
  <string name="notification_battery_optimization_title">Battery optimization is on!</string>
  <string name="notification_battery_optimization_text">To work reliable, PAssist must run with battery optimization turned off. Battery consumption only increases slightly during active on-call duty.</string>
  <string name="notification_draw_overlays_title">\'Display over other apps\' is deactivated!</string>
  <string name="notification_draw_overlays_text">To show alerts even if PAssist is in the background, the \"Display over other apps\" setting must be active for PAssist.</string>
  <string name="alert_action_close">Close</string>
  <string name="state_fragment_operations_center">Operations Center</string>
  <string name="state_fragment_partner">Partner</string>
  <string name="state_fragment_pikett_state">On-call state</string>
  <string name="state_fragment_alarm_state">Alarm state</string>
  <string name="general_enabled">Enabled</string>
  <string name="general_disabled">Disabled</string>
  <string name="state_on">On</string>
  <string name="state_manually_on">On (manually)</string>
  <string name="state_off">Off</string>
  <string name="state_fragment_partner_not_found_clipboard_label">Partner nickname</string>
  <string name="alarm_state_on">Unconfirmed</string>
  <string name="alarm_state_on_confirmed">Confirmed</string>
  <string name="alarm_state_off">Off</string>
  <string name="contact_helper_unknown_contact">Unknown</string>
  <string name="contact_preference_empty_selection">No selection</string>
  <string name="about_documentation"><![CDATA[<h3>Documentation</h3><p>A manual for the use of PAssist can be found here: <a href=https://github.com/frimtec/pikett-assist/blob/master/README.md#passist>Manual</a>.</p>]]></string>
  <string name="about_disclaimer"><![CDATA[<h3>Disclaimer</h3><p>The author assumes no responsibility, gives no guarantee when using the application.</p><p>The application is free.
    The source code is available as open source under the <a href=https://opensource.org/licenses/Apache-2.0>Apache 2.0 license</a>.</p>]]></string>
  <string name="general_download">Download</string>
  <string name="general_install">Install</string>
  <string name="general_no">No</string>
  <string name="general_yes">Yes</string>
  <string name="general_are_you_sure">Are you sure?</string>
  <string name="general_entry_deleted">Entry has been deleted.</string>
  <string name="state_fragment_permissions">Permissions</string>
  <string name="state_fragment_draw_overlays">Display over other apps</string>
  <string name="state_fragment_battery_optimization">Battery Optimization</string>
  <string name="missing_permission_calendar_access">Missing permission to read calendar!</string>
  <string name="permission_required">Required permission:</string>
  <string name="permission_contacts_title">Contacts</string>
  <string name="permission_contacts_text">PAssist reads the phone number from the contact of the configured operations center. This is used to decide which SMS must be supervised during on-call duty. Without this permission PAssist does not work!</string>
  <string name="permission_calendar_title">Calendar</string>
  <string name="pref_header_day_night_profile"><![CDATA[Day/night profile]]></string>
  <string name="pref_title_day_start_time">Day</string>
  <string name="pref_default_day_start_time" translatable="false">07:00</string>
  <string name="pref_title_night_start_time">Night</string>
  <string name="pref_default_night_start_time" translatable="false">22:00</string>
  <string name="pref_title_manage_volume">Control during on-call duty</string>
  <string name="pref_title_category_profile_start_times">Profile start times</string>
  <string name="pref_title_category_ringtone_volume">Ringtone volume</string>
  <string name="pref_title_volume_day">Volume day</string>
  <string name="pref_title_volume_night">Volume night</string>
  <string name="pref_message_test_alarm_message_pattern">Enter a valid RegEx (use optionally a single group to select the test context)</string>
  <string name="general_export">Export</string>
  <string name="general_import">Import</string>
  <string name="alert_list_header_statistic_month_label">Last 30 days:</string>
  <string name="alert_list_header_statistic_year_label">Last 365 days:</string>
</resources>