<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.github.frimtec.android.pikettassist.ui.preferences.CalendarListPreference
        android:icon="@drawable/ic_date_range_black_24dp"
        android:key="calendar_selection"
        android:summary="%s"
        android:title="@string/pref_title_calendar_selection" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_calendar_event_pikett_title_pattern"
        android:icon="@drawable/ic_event_black_24dp"
        android:inputType="text"
        android:key="calendar_event_pikett_title_pattern"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:singleLineTitle="false"
        android:title="@string/pref_title_calendar_event_pikett_title_pattern" />
</PreferenceScreen>
