<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <com.github.frimtec.android.pikettassist.settings.AlarmRingtonePreference
        android:icon="@drawable/ic_ring_volume_black_24dp"
        android:key="alarm_ring_tone"
        android:summary="%s"
        android:title="@string/pref_title_alarm_ring_tone" />

    <com.github.frimtec.android.pikettassist.settings.AlarmRingtonePreference
        android:icon="@drawable/ic_test_alarm"
        android:key="test_alarm_ring_tone"
        android:summary="%s"
        android:title="@string/pref_title_test_alarm_ring_tone" />

    <SwitchPreference
        android:defaultValue="true"
        android:icon="@drawable/ic_signal_cellular_connected_no_internet_1_bar_black_24dp"
        android:key="supervise_signal_strength"
        android:title="@string/pref_title_supervise_signal_strength" />
    <SwitchPreference
        android:defaultValue="true"
        android:icon="@drawable/ic_system_update_alt_black_24dp"
        android:key="check_for_updates"
        android:title="@string/pref_title_check_for_updates" />

</PreferenceScreen>
